@@ -7,6 +7,8 @@ import static org.apache.commons.lang3.StringUtils.isNotBlank;
 
 import java.util.List;
 
+import org.apache.commons.lang3.StringUtils;
+
 import com.google.common.collect.Lists;
 
 import eu.dnetlib.dhp.schema.oaf.*;
@@ -142,7 +144,7 @@ public class XmlSerializationUtils {
 	}
 
 	public static String getAttributes(final Qualifier q) {
-		if (q == null || q.isBlank())
+		if (q == null || StringUtils.isBlank(q.getClassid()))
 			return "";
 
 		return new StringBuilder(" ")
